Unicode decode error in Python console when completing a method name of text object in edit mode #34902

Closed
opened 2013-04-06 15:45:48 +02:00 by Shinsuke Irie · 3 comments
Member

%%%--- Operating System, Graphics card ---

Ubuntu 13.04
GeForce GTX 670

- Blender version with error, and version that worked ---

r55841

- Short description of error ---

Steps to reproduce:

  1. Add text object with a name "Text"
  2. Change to edit mode
  3. Input an utf-8 text like "α"
  4. Go to the Python console
  5. Type "D.curves['Text']." + key(s) assigned to autocomplete

then the followiing error is thrown:

Traceback (most recent call last):

File "/home/irie/build/blender2.6/cmake/bin/2.66/scripts/modules/console_python.py", line 252, in autocomplete
  private=bpy.app.debug_python)
File "/home/irie/build/blender2.6/cmake/bin/2.66/scripts/modules/console/intellisense.py", line 129, in expand
  matches, word = complete(line, cursor, namespace, private)
File "/home/irie/build/blender2.6/cmake/bin/2.66/scripts/modules/console/intellisense.py", line 90, in complete
  matches = complete_namespace.complete(word, namespace, private)
File "/home/irie/build/blender2.6/cmake/bin/2.66/scripts/modules/console/complete_namespace.py", line 159, in complete
  matches = complete_names(TEMP + '.' + attr, namespace)
File "/home/irie/build/blender2.6/cmake/bin/2.66/scripts/modules/console/complete_namespace.py", line 61, in complete_names
  completer.complete(word, 0)
File "/home/irie/build/blender2.6/cmake/bin/2.66/python/lib/python3.3/rlcompleter.py", line 77, in complete
  self.matches = self.attr_matches(text)
File "/home/irie/build/blender2.6/cmake/bin/2.66/python/lib/python3.3/rlcompleter.py", line 142, in attr_matches
  if word[:n] == attr and hasattr(thisobject, word):

UnicodeDecodeError: 'utf-8' codec can't decode byte 0xce in position 0: unexpected end of data

This error doesn't occur in object mode.
%%%

%%%--- Operating System, Graphics card --- Ubuntu 13.04 GeForce GTX 670 - Blender version with error, and version that worked --- r55841 - Short description of error --- Steps to reproduce: 1. Add text object with a name "Text" 2. Change to edit mode 3. Input an utf-8 text like "α" 4. Go to the Python console 5. Type "D.curves['Text']." + key(s) assigned to autocomplete then the followiing error is thrown: Traceback (most recent call last): ``` File "/home/irie/build/blender2.6/cmake/bin/2.66/scripts/modules/console_python.py", line 252, in autocomplete private=bpy.app.debug_python) File "/home/irie/build/blender2.6/cmake/bin/2.66/scripts/modules/console/intellisense.py", line 129, in expand matches, word = complete(line, cursor, namespace, private) File "/home/irie/build/blender2.6/cmake/bin/2.66/scripts/modules/console/intellisense.py", line 90, in complete matches = complete_namespace.complete(word, namespace, private) File "/home/irie/build/blender2.6/cmake/bin/2.66/scripts/modules/console/complete_namespace.py", line 159, in complete matches = complete_names(TEMP + '.' + attr, namespace) File "/home/irie/build/blender2.6/cmake/bin/2.66/scripts/modules/console/complete_namespace.py", line 61, in complete_names completer.complete(word, 0) File "/home/irie/build/blender2.6/cmake/bin/2.66/python/lib/python3.3/rlcompleter.py", line 77, in complete self.matches = self.attr_matches(text) File "/home/irie/build/blender2.6/cmake/bin/2.66/python/lib/python3.3/rlcompleter.py", line 142, in attr_matches if word[:n] == attr and hasattr(thisobject, word): ``` UnicodeDecodeError: 'utf-8' codec can't decode byte 0xce in position 0: unexpected end of data This error doesn't occur in object mode. %%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%fixed r55914.%%%

%%%fixed r55914.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#34902
No description provided.