fix [#34902] Unicode decode error in Python console when completing a method name of text object in edit mode